--- a/borrowbook.ui
+++ b/borrowbook.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>借阅</string>
+   <string>Dialog</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-image: url(:/new/prefix1/225ef3557e31ea0.jpg);</string>
@@ -46,15 +46,6 @@
        <width>490</width>
        <height>380</height>
       </size>
-     </property>
-     <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
-     </property>
-     <property name="selectionMode">
-      <enum>QAbstractItemView::MultiSelection</enum>
-     </property>
-     <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectRows</enum>
      </property>
      <row>
       <property name="text">
@@ -94,61 +85,6 @@
      <row>
       <property name="text">
        <string>8</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>9</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>10</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>11</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>12</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>13</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>14</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>15</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>16</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>17</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>18</string>
-      </property>
-     </row>
-     <row>
-      <property name="text">
-       <string>19</string>
       </property>
      </row>
      <column>
